Back de disponilidade feito
